--- a/code/config/hopenet_config.yaml
+++ b/code/config/hopenet_config.yaml
@@ -1,5 +1,8 @@
-snapshot_path: C:\Noam\Code\vision_course\hopenet\models\hopenet_robust_alpha1.pkl
+gpu_id: 0
 data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\300W-3D
 file_name_list: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\rel_paths.txt
-gpu_id: 0
+snapshot_path: C:\Noam\Code\vision_course\hopenet\models\hopenet_robust_alpha1.pkl
+batch_size_test: 1
+batch_size_train: 16
+save_viz: True
 dataset: Pose_300W_LP
