--- a/code/config/test_config.yaml
+++ b/code/config/test_config.yaml
@@ -17,3 +17,4 @@ predictor_path: C:\Noam\Code\vision_course\shape_predictor\shape_predictor_68_fa
 
 rel_paths_file_name: rel_paths.txt
 output_file_name: output.csv
+#output_file_name: raz.csv
