--- a/code/config/validation_config.yaml
+++ b/code/config/validation_config.yaml
@@ -6,3 +6,5 @@ predictor_path: C:\Noam\Code\vision_course\shape_predictor\shape_predictor_68_fa
 create_rel_paths_file_at: C:\Noam\Code\vision_course\hopenet\input\validation2
 rel_paths_file_name: rel_paths.txt
 is_using_opencv_face_detector: False
+
+test_validation_output_dir: C:\Noam\Code\vision_course\hopenet\validation_output
