--- a/code/config/train_config.yaml
+++ b/code/config/train_config.yaml
@@ -1,12 +1,13 @@
+learning_rate: 0.001
+alpha: 0.001
 gpu_id: 0
 train_data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\300W-3D
-test_data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\300W-3D
 file_name_list: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\rel_paths.txt
-snapshot_path: C:\Noam\Code\vision_course\hopenet\models\hopenet_robust_alpha1.pkl
+snapshot_path: ""
 
 batch_size_test: 1
 batch_size_train: 16
-num_epochs: 5
+num_epochs: 2
 save_viz: True
 dataset: Pose_300W_LP
 create_paths_file_at: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\rel_paths.txt
