--- a/code/config/hopenet_config.yaml
+++ b/code/config/hopenet_config.yaml
@@ -2,7 +2,8 @@ gpu_id: 0
 train_data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\300W-3D
 test_data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\300W-3D
 file_name_list: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\rel_paths.txt
-snapshot_path: C:\Noam\Code\vision_course\hopenet\models\hopenet_robust_alpha1.pkl
+#snapshot_path: C:\Noam\Code\vision_course\hopenet\models\hopenet_robust_alpha1.pkl
+snapshot_path:  C:\Noam\Code\vision_course\hopenet\deep-head-pose\code\original_code_augmented\output\snapshots\output_epoch_1.pkl
 
 batch_size_test: 1
 batch_size_train: 16
