--- a/code/config/train_config_holdout.yaml
+++ b/code/config/train_config_holdout.yaml
@@ -1,7 +1,9 @@
 learning_rate: 0.001
 alpha: 0.001
 gpu_id: 0
-train_data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\300W-3D
+#train_data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\300W-3D
+train_data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\big_set\300W_LP
+
 file_name_list: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\rel_paths.txt
 snapshot_path: ""
 train_percentage: 95.0
@@ -9,7 +11,7 @@ seed: 17
 
 batch_size_test: 1
 batch_size_train: 16
-num_epochs: 2
+num_epochs: 30
 save_viz: True
 dataset: Pose_300W_LP
 create_paths_file_at: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\rel_paths.txt
