--- a/code/config/train_config_holdout.yaml
+++ b/code/config/train_config_holdout.yaml
@@ -4,7 +4,7 @@ gpu_id: 0
 #train_data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\300W-3D
 train_data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\big_set\300W_LP
 
-file_name_list: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\rel_paths.txt
+file_name_list: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\big_set\300W_LP\rel_paths.txt
 snapshot_path: ""
 train_percentage: 95.0
 seed: 17
