added file which is hard coded the original training code

--- a/code/config/train_config.yaml
+++ b/code/config/train_config.yaml
@@ -1,8 +1,9 @@
-learning_rate: 0.001
-alpha: 1e-5
+learning_rate: 0.00001
+alpha: 0.001
 gpu_id: 0
-train_data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\300W-3D
-file_name_list: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\rel_paths.txt
+#train_data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\300W-3D
+train_data_dir_path: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\big_set\300W_LP
+file_name_list: C:\Noam\Code\vision_course\downloads\datasets\300W-LP\big_set\300W_LP\rel_paths.txt
 snapshot_path: ""
 
 batch_size_test: 1
